--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,5 @@
   "singleQuote": true,
   "trailingComma": "all",
   "bracketSpacing": true,
-  "arrowParens": "always"
+  "arrowParens": "always",
 }
