--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RPG Game",
   "scripts": {
     "start": "node scripts/start.js",
-    "lint": "npx eslint src/**/*.js",
+    "lint": "npx eslint src/**/*.js --fix",
     "prettier": "npx prettier --write .",
     "dev": "npx webpack server",
     "prepare": "husky install",
